--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,19 @@
 # Tested with Python 3.10+
 
 # Core ML
-numpy>=1.24.0,<2.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-scipy>=1.11.0
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.0
+scipy==1.11.1
 
 # Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
+matplotlib==3.7.2
+seaborn==0.12.2
 
 # Utilities
-tqdm>=4.65.0
-joblib>=1.3.0
+tqdm==4.65.0
+joblib==1.3.1
 
-# Optional: Deep Learning (for CNN models)
-# torch>=2.0.0
-# torchvision>=0.15.0
-
-# Development
-# pytest>=7.4.0
-# black>=23.0.0
-# flake8>=6.0.0
+# Deep Learning (CNN Models)
+torch==2.0.1
+torchvision==0.15.2
